# daisychain

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: dependabot.yml
benches/json/: json_daisychain.rs  json_nom.rs  main.rs
examples/: alternate.rs  bracketed.rs  enum-handcrafted.rs  enum-strum.rs  enum-variant.rs  enum.rs  intro.rs  time.rs
examples/cookbook/: alternate.rs  api.rs  bind.rs  bracketed.rs  ch_2_simple_example.rs  ch_3_binding_vars.rs  ch_4_enum_handcrafted.rs  ch_5_enum_strum.rs  ch_7_alternate.rs  ch_8_composition.rs  composition.rs  enum-handcrafted.rs  enum-strum.rs  enum-variant.rs  enum_handcrafted.rs  enum_strum.rs  enum_variant.rs  intro.rs  main.rs  section_1_getting_started.rs  section_2_simple_example.rs  section_6_enum_variant.rs  section_7_alternate.rs  section_8_composition.rs  section_9_parser_api.rs  time.rs
src/: combo.rs  cursor.rs  error.rs  graveyard.rs  lib.rs  logging.rs  parser.rs  prelude.rs  selection.rs  text_parser.rs  util.rs
src/contrib/: contrib_parsers.rs  mod.rs  parsers.rs
src/cookbook/: ch_2_simple_example.rs  ch_3_binding_vars.rs  ch_4_enum_handcrafted.rs  ch_5_enum_strum.rs  ch_6_enum_variant.rs  ch_7_alternate.rs  ch_8_alternate_opt.rs  ch_8_composition.rs  ch_9_parser_api.rs  main.rs  mod.rs
