[package]
authors = ["Andy Watkins <andy@webcalculator.com>"]
description = "a method chaining parsing library"
edition = "2021"
name = "kateno"
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.56"
repository = "https://github.com/akanalytics/kateno"
keywords = ["parsing", "parser"]
categories = ["parsing", ]
readme = "README.md"


[dependencies]
log = {version = "0.4", features = ["release_max_level_debug"]}

[dev-dependencies]
env_logger = "0.9"
test-log = {version = "0.2"}
strum = "0.24"
strum_macros = "0.24"

[features]
