[package]
authors = ["Andy Watkins <andy@webcalculator.com>"]
description = "a method chaining parsing library"
edition = "2021"
name = "daisychain"
version = "0.0.2"
license = "MIT OR Apache-2.0"
rust-version = "1.65.0"
repository = "https://github.com/akanalytics/daisychain"
documentation="https://docs.rs/daisychain"
keywords = ["parsing", "parser"]
categories = ["parsing", ]
readme = "README.md"


[dependencies]
log = {version = "0.4", features = ["release_max_level_debug"]}
once_cell = "1.17.1"
strum = { version = "0.24", optional = true }
strum_macros = { version ="0.24", optional = true}


[dev-dependencies]
env_logger = "0.10"
test-log = {version = "0.2"}
daisychain = { path = ".", default-features = false, features = ["cookbook"] }
strum = { version = "0.24" }
strum_macros = { version ="0.24"}

[features]
default = []
cookbook = ["strum", "strum_macros"]

[package.metadata.docs.rs]
features = ["cookbook"]
# cargo-args = ["--examples"]
# cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
# rustc-args = ["--cfg", "nightly"]
# rustdoc-args = ["--cfg", "nightly"]
# cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

