[package]
authors = ["Andy Watkins <andy@webcalculator.com>"]
categories = ["parsing"]
description = "a method chaining parsing library"
documentation = "https://docs.rs/daisychain"
edition = "2021"
keywords = ["parsing", "parser"]
license = "MIT OR Apache-2.0"
name = "daisychain"
readme = "README.md"
repository = "https://github.com/akanalytics/daisychain"
rust-version = "1.65.0"
version = "0.0.4"

[dependencies]
log = {version = "0.4", features = ["release_max_level_debug"]}
once_cell = "1.17.1"
strum = {version = "0.24", optional = true}
strum_macros = {version = "0.24", optional = true}

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}
daisychain = {path = ".", default-features = false, features = ["cookbook"]}
env_logger = "0.10"
nom = "7.1.3"
strum = {version = "0.24"}
strum_macros = {version = "0.24"}
test-log = {version = "0.2"}

[[bench]]
harness = false
name = "json"

[features]
cookbook = ["strum", "strum_macros"]
default = []

[package.metadata.docs.rs]
features = ["cookbook"]
# cargo-args = ["--examples"]
# cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
# rustc-args = ["--cfg", "nightly"]
# rustdoc-args = ["--cfg", "nightly"]
# cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
